[gd_scene load_steps=17 format=3 uid="uid://by1ru1jrwi41q"]

[ext_resource type="Texture2D" uid="uid://ddlh88a0b7vq2" path="res://Enemies/Slime/slime.png" id="1_3xpbl"]
[ext_resource type="Script" path="res://Enemies/Slime/slime.gd" id="1_of4iw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iqv45"]
radius = 3.0
height = 12.0

[sub_resource type="Animation" id="Animation_ydyua"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_rsjka"]
resource_name = "die"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 12), Vector2i(1, 12), Vector2i(2, 12), Vector2i(3, 12), Vector2i(4, 12)]
}

[sub_resource type="Animation" id="Animation_n6wye"]
resource_name = "iddleD"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_gj0p1"]
resource_name = "iddleR"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_pmrar"]
resource_name = "iddleU"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_n868x"]
resource_name = "walkR"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_5klxh"]
resource_name = "walkU"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7748v"]
_data = {
"RESET": SubResource("Animation_ydyua"),
"die": SubResource("Animation_rsjka"),
"iddleD": SubResource("Animation_n6wye"),
"iddleR": SubResource("Animation_gj0p1"),
"iddleU": SubResource("Animation_pmrar"),
"walkR": SubResource("Animation_n868x"),
"walkU": SubResource("Animation_5klxh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpgmq"]
size = Vector2(18, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inguo"]
size = Vector2(20, 11)

[sub_resource type="Animation" id="Animation_ns5wv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0.172549, 0)]
}

[sub_resource type="Animation" id="Animation_wcyhm"]
resource_name = "hurt"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slime/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.905882, 0.878431, 0.27451), Color(1, 0, 0.172549, 0.572549), Color(1, 0.905882, 0.878431, 0.27451), Color(1, 0, 0.172549, 0.572549)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_40vaa"]
_data = {
"RESET": SubResource("Animation_ns5wv"),
"hurt": SubResource("Animation_wcyhm")
}

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_of4iw")

[node name="Slime" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, -7)
texture = ExtResource("1_3xpbl")
hframes = 7
vframes = 13

[node name="ColorRect" type="ColorRect" parent="Slime"]
clip_children = 2
offset_left = -22.0
offset_top = -20.0
offset_right = 18.0
offset_bottom = 20.0
color = Color(0, 0, 0.172549, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_iqv45")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7748v")
}

[node name="HitBox" type="Area2D" parent="." groups=["Slimes"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_gpgmq")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_inguo")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_40vaa")
}

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
